# GaussDigitization

./: CMakeLists.txt  INSTALL.txt  README.md  functions.h  main.cpp  point.h  polygon.h
Results/: bunny_exportedMesh.off  camel_exportedMesh.off
Samples/: bunny.off  camel.off  circle10.2d  ellipse.2d  flower.2d  hand.2d  leaf.2d
